--- a/src/components/AboutStuff.astro
+++ b/src/components/AboutStuff.astro
@@ -41,7 +41,12 @@ import Hero from '../components/Hero.astro';
         <section>
             <h2 class="section-title">Education</h2>
             <div class="content">
-                <p>Corporis voluptates tenetur laudantium.</p>
+                <h3 class="section-title">University of Manchester, 
+                    MSc Robotics,
+                    2024 - 2025</h3>
+                <p>Currently studying for my MSc in Robotics. 
+                    I am developing my skills across the field of robotics, using Python and ROS 2 for software, 
+                    while also furthering my understanding of the mathematics behind machine learning.</p>
             </div>
         </section>
         <section>
