--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,9 +5,8 @@ import type { iconPaths } from './IconPaths';
 
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
-	{ label: 'Home', href: '/' },
-	{ label: 'Work', href: '/work/' },
-	{ label: 'About', href: '/about/' },
+	{ label: 'Home', href: '/lew-nay/' },
+	{ label: 'Work', href: '/lew-nay/work/' },
 ];
 
 /** Icon links to social media — edit these with links to your profiles! */
@@ -27,9 +26,9 @@ const isCurrentPage = (href: string) => {
 
 <nav>
 	<div class="menu-header">
-		<a href="/" class="site-title">
+		<a href="/lew-nay" class="site-title">
 			<Icon icon="terminal-window" color="var(--accent-regular)" size="1.6em" gradient />
-			Jeanine White
+			Lewis Naylor
 		</a>
 		<menu-button>
 			<template>
