--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const projects = (await getCollection('work'))
 			<header class="hero">
 				<Hero
 					title="Hello, my name is Lewis Naylor"
-					tagline="I am a Creative Developer who is currently based in Portland, Oregon."
+					tagline="I am a MSc Robotics student at The University of Manchester"
 					align="start"
 				>
 					<div class="roles">
@@ -44,14 +44,13 @@ const projects = (await getCollection('work'))
 				</Hero>
 
 				<img
-					alt="Jeanine White smiling in a red plaid shirt and tortoise shell glasses"
+					alt="image"
 					width="480"
 					height="620"
-					src="/lew-nay/assets/portrait.jpg"
+					src="/lew-nay/assets/portrait.jfif"
 				/>
 			</header>
 
-			<Skills />
 		</div>
 
 		<main class="wrapper stack gap-20 lg:gap-48">
