updates to portfolio

--- a/src/components/AboutStuff.astro
+++ b/src/components/AboutStuff.astro
@@ -7,37 +7,30 @@ import Hero from '../components/Hero.astro';
             title="About"
             tagline="Thanks for stopping by. Read below to learn more about myself and my background."
         >
-            <img
-                width="1553"
-                height="873"
-                src="/assets/at-work.jpg"
-                alt="Jeanine White at work with a colleague"
-            />
+            
         </Hero>
 
         <section>
             <h2 class="section-title">Background</h2>
             <div class="content">
                 <p>
-                    Lorem ipsum dolor sit amet, <a href="https://astro.build/">Astro</a> makes people happy.
-                    Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum
-                    id venenatis a condimentum vitae. Dapibus ultrices in iaculis nunc. Arcu odio ut sem nulla
-                    pharetra diam sit amet. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare.
+                    I am a current postgraduate student at the University of Manchester studying MSc Robotics, and I completed my Bachelor's degree in Physics.
                 </p>
                 <p>
-                    Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Eget gravida cum sociis
-                    natoque penatibus. Cras fermentum odio eu feugiat pretium nibh. Proin nibh nisl
-                    condimentum id venenatis. Porta nibh venenatis cras sed felis eget velit. Id diam vel
-                    quam elementum pulvinar etiam non.
-                </p>
-                <p>
-                    Ultrices tincidunt arcu non sodales neque sodales ut. Sed enim ut sem viverra aliquet
-                    eget sit amet. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra.
-                    Viverra accumsan in nisl nisi scelerisque eu ultrices. In massa tempor nec feugiat nisl
-                    pretium fusce.
+                    I hope to be able to take the knowledge and skills I've acquired in my studies and apply them into my future career. 
                 </p>
             </div>
         </section>
+
+        <section>
+            <h2 class="section-title">Research Interests</h2>
+            <div class="content">
+                With my background in physics and my current work in robotics, my main research areas of interest are in novel locomotion for robot systems
+                in reduced gravity environments and on improving the autonomous capabilities of robotic systems to reduce the need for human operation in 
+                scenarios such as space exploration where latency between human operators and the robot makes teleoperation difficult.
+            </div>
+        </section>
+
         <section>
             <h2 class="section-title">Education</h2>
             <div class="content">
@@ -45,14 +38,55 @@ import Hero from '../components/Hero.astro';
                     MSc Robotics,
                     2024 - 2025</h3>
                 <p>Currently studying for my MSc in Robotics. 
-                    I am developing my skills across the field of robotics, using Python and ROS 2 for software, 
-                    while also furthering my understanding of the mathematics behind machine learning.</p>
+                    I am developing my skills across the field of robotics. In this degree I have developed my ability
+                    across a suite of different skills.
+                    In the course of this degree I have developed my ability within the ROS2 suite with Python and developed my mathematical abilities
+                    and understanding across multiple modules. 
+                </p>
+                <p> Modules completed in this degree:
+                    <ul>
+                        <li>Autonomous Mobile Robotics</li>
+                        <li>Cognitive Robotics and Computer Vision</li>
+                        <li>Foundations of Machine Learning</li>
+                        <li>Robotic Manipulators</li>
+                        <li>Robotic Systems</li>
+                        <li>Robotic Systems Design Project</li>
+                        <li>Software for Robotics</li>
+                    </ul>
+                </p>
+
+                <p>
+                    <i>Additionally, I will be conducting an indepentent research project running during the summer of this 2025, at the current time
+                    this project is still to be determined.</i>
+                </p>
+
+                <h3 class="section-title">University of Salford, 
+                    BSc (Hons) Physics,
+                    2021 - 2024</h3>
+
+                <p>
+                    In my BSc I achieved First Class Honours and gained an understanding across a breadth of different aspects of physics. 
+                    I particularly enjoyed modules focused on nuclear physics and undertook optional modules on astrophysics & planetary physics and hope to use the knowledge from this in my future career.
+                </p>
             </div>
         </section>
         <section>
             <h2 class="section-title">Skills</h2>
             <div class="content">
-                <p>officia unde omnis</p>
+                <p>
+                    <ul>
+                        <li>C++</li>
+                        <li>Data Analysis</li>
+                        <li>Linux</li>
+                        <li>MatLab</li>
+                        <li>Python</li>
+                        <li>React</li>
+                        <li>ROS2</li>
+                        <li>TypeScript</li>
+                    </ul>
+                </p>
+
+                <p>You can see examples of my abilities in these skills on my <a href="https://www.github.com/lew-nay">GitHub.</a></p>
             </div>
         </section>
     </main>
