--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -13,6 +13,7 @@ const textLinks: { label: string; href: string }[] = [
 const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[] = [
 	{ label: 'GitHub', href: 'https://github.com/lew-nay', icon: 'github-logo' },
 	{ label: 'LinkedIn', href: 'https://linkedin.com/in/lewisdn', icon: 'linkedin-logo' },
+	{ label: 'CV', href: "../../lew-nay/assets/Lewis_Naylor_Resume.pdf", icon: 'cv-logo'}
 ];
 
 /** Test if a link is pointing to the current page. */
