--- a/src/components/AboutStuff.astro
+++ b/src/components/AboutStuff.astro
@@ -77,6 +77,7 @@ import Hero from '../components/Hero.astro';
                     <ul>
                         <li>C++</li>
                         <li>Data Analysis</li>
+                        <li>LaTeX</li>
                         <li>Linux</li>
                         <li>MatLab</li>
                         <li>Python</li>
