--- a/src/components/AboutStuff.astro
+++ b/src/components/AboutStuff.astro
@@ -34,17 +34,17 @@ import Hero from '../components/Hero.astro';
         <section>
             <h2 class="section-title">Education</h2>
             <div class="content">
-                <h3 class="section-title">University of Manchester, 
+                <h3 class="section-title" style="margin-bottom: 10px">University of Manchester, 
                     MSc Robotics,
                     2024 - 2025</h3>
-                <p>Currently studying for my MSc in Robotics. 
+                <p style="margin-bottom: 10px">Currently studying for my MSc in Robotics. 
                     I am developing my skills across the field of robotics. In this degree I have developed my ability
                     across a suite of different skills.
                     In the course of this degree I have developed my ability within the ROS2 suite with Python and developed my mathematical abilities
                     and understanding across multiple modules. 
                 </p>
                 <p> Modules completed in this degree:
-                    <ul>
+                    <ul style="margin-bottom: 10px">
                         <li>Autonomous Mobile Robotics</li>
                         <li>Cognitive Robotics and Computer Vision</li>
                         <li>Foundations of Machine Learning</li>
@@ -55,18 +55,32 @@ import Hero from '../components/Hero.astro';
                     </ul>
                 </p>
 
-                <p>
+                <p style="margin-bottom: 20px">
                     <i>Additionally, I will be conducting an indepentent research project running during the summer of this 2025, at the current time
                     this project is still to be determined.</i>
                 </p>
 
-                <h3 class="section-title">University of Salford, 
+                <h3 class="section-title" style="margin-bottom: 10px">University of Salford, 
                     BSc (Hons) Physics,
                     2021 - 2024</h3>
 
-                <p>
-                    In my BSc I achieved First Class Honours and gained an understanding across a breadth of different aspects of physics. 
-                    I particularly enjoyed modules focused on nuclear physics and undertook optional modules on astrophysics & planetary physics and hope to use the knowledge from this in my future career.
+                <p style="margin-bottom: 10px">
+                    In my BSc I achieved First Class Honours and gained an understanding across a breadth of different aspects of physics and furthered
+                    my abilities across a range of mathematical techniques. 
+
+                <p style="margin-bottom: 10px">Optional modules taken:</p>
+
+                    <ul style="margin-bottom: 10px">
+                        <li>Astrophyiscs and Planetary Physics</li>
+                        <li>Computational Laboratory</li>
+                        <li>Group Project</li>
+                    </ul>
+                </p>
+
+                <p> 
+                    My final year project, An Investigation into Gallium Lanthanum Sulfide as a Solid-state Electrolyte, supervised by Dr. Mark Hughes
+                    was an independent research project that ran throughout the final year of my BSc degree. Further information and my dissertation can be found
+                    in my work section.
                 </p>
             </div>
         </section>
@@ -74,7 +88,7 @@ import Hero from '../components/Hero.astro';
             <h2 class="section-title">Skills</h2>
             <div class="content">
                 <p>
-                    <ul>
+                    <ul style="margin-bottom: 10px">
                         <li>C++</li>
                         <li>Data Analysis</li>
                         <li>LaTeX</li>
