--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,9 +35,9 @@ const projects = (await getCollection('work'))
 					align="start"
 				>
 					<div class="roles">
-						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
+						<Pill><Icon icon="code" size="1.33em" /> Coding</Pill>
+						<Pill><Icon icon="physics-atom" size="1.33em" /> Physics</Pill>
+						<Pill><Icon icon="robot-head" size="1.33em" /> Robotics</Pill>
 					</div>
 				</Hero>
 
