--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ const projects = (await getCollection('work'))
 					alt="image"
 					width="480"
 					height="620"
-					src="/lew-nay/assets/portrait.jfif"
+					src="/lew-nay/assets/portrait.jpg"
 				/>
 			</header>
 
